syntax = "proto3";

package com.mercor.assignment.scd.domain.job;

option java_multiple_files = true;
option java_package = "com.mercor.assignment.scd.domain.job";
option java_outer_classname = "JobResponseProto";
option go_package = "github.com/mercor/assignment/scd/domain/job";

// Job message definition
message JobProto {
  string id = 1;
  int32 version = 2;
  string uid = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
  string status = 6;
  double rate = 7;
  string title = 8;
  string company_id = 9;
  string contractor_id = 10;
}

// Job-specific response messages
message JobResponse {
  JobProto job = 1;
}

message JobListResponse {
  repeated JobProto jobs = 1;
}